# Skaler

./: README.md  pyproject.toml
.github/workflow/: ci.yaml
examples/: eg_basic_openai.py
skaler/: __init__.py  exceptions.py
skaler/backend/: __init__.py  memory_backend.py  redis_backend.py
skaler/core/: __init__.py  api_provider.py  manager.py  proxy_pool.py
skaler/core/providers/: __init__.py  api_provider.py  dummy_provider.py
skaler/http/: __init__.py  requester.py
tests/unit/: test_manager.py  test_memory_backend.py  test_proxy_pool.py  test_requester.py
