[project]
name = "scaler"
version = "0.1.0"
description = "Async-first Python library for horizontal scaling — rotate across API keys, proxies, and rate-limited resources."
authors = [
    { name="Your Name", email="your@email.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.9.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0"
]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skaler"]

[tool.ruff]
line-length = 80
target-version = "py311"
src = ["."]
select = ["E", "F", "I", "W", "C"]  
fix = true